# fastex_openapi

./: README.md  main.py  pyproject.toml
src/: __init__.py  utils.py
src/responses/: __init__.py  _registry.py  main.py  types.py
