[project]
name = "fastex-openapi"
version = "0.1.0"
description = "A utility package for documenting FastAPI route responses and working with OpenAPI in FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.12",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
